# codefreeze-2025-turing-machines

haskell-engine/: .gitignore  do  example.tm  turing-engine-cursor.hs
turing-machine-visualizer/: README.md  demo-changes.sh  pyproject.toml
turing-machine-visualizer/machines/: adding.tm  initial-tape.tm  unary-add-subtract.tm  unary-adder.tm  unary-subtractor.tm
turing-machine-visualizer/simulator/: simulator.py  simulator_test.py
turing-machine-visualizer/turing/machines/: hello_codefreeze.py
turing-machine-visualizer/turing/simulator/: simulator.py  simulator_test.py
turing-machine-visualizer/turing/visualizer/: visualizer.py
turing-machine-visualizer/visualizer/: visualizer.py
