[tool.poetry]
name = "Turing Machine Visualizer"
version = "0.1.0"
description = ""
authors = ["Kjeld Schmidt <contact@kjeld-schmidt.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pyside6 = "^6.8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

